# qadence2-core

./: .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  README.md  TODO.txt  mkdocs.yml  pyproject.toml  renovate.json  setup.py  versions.json
.github/workflows/: run-tests-and-mypy.yml  test.yml
docs/: demo.py  getting_started_example.md  index.md  legacy.md  sample_page.md  transition.md
docs/getting_started/: CONTRIBUTING.md  LICENSE.md
examples/: code_prototype.ipynb  demo.ipynb  example.ipynb  expressions_registers.py  pulser_compiler.py  pyq_compiler.py  pyq_differentiability.py  pyq_full_example.py
examples/code_prototypes/: fresnel1_basic_rx_v1.py  pyq_basic_diff.py  pyq_basic_diff_v1.py  pyq_basic_rx_v1.py  pyq_basic_training.py  pyq_basic_training_v1.py  pyq_basic_training_v2.py
legacy/: legacy.md  qadence1_code.ipynb  qadence2_code-Copy1.ipynb  qadence2_code.ipynb
qadence2/: __init__.py  compiler.py  main.py  platforms
qadence2-core/: expressions  main.py
qadence2/extensions/legacy/: __init__.py  ansatze.py  model.py  operators.py  utils.py
qadence2/qadence2_extensions/legacy/: ansatze.py  utils.py
qadence2_core/: __init__.py  expressions
qadence_core/std/: __init__.py  data_conversion.py
qadence_core/std/embeddings/: expressions.py
qadence_core/std/legacy/: __init__.py  quantum_circuit.py  quantum_model.py
qadence_core/types/: operators.py  parameter.py  register.py
tests/: test_code_prototypes.py  test_compiling_expr.py  test_main.py  test_modules_integration.py  test_submodules.py
tests/code_prototypes/: __init__.py  implementation.py
tests/std/: test_legacy.py  test_register.py
v0.1.2/sample_page/: index.html
v0.1.2/search/: search_index.json
v0.1.3/: 404.html  index.html
v0.2.0/: 404.html  index.html
v0.2.0/getting_started/CODE_OF_CONDUCT/: index.html
v0.2.0/getting_started/CONTRIBUTING/: index.html
v0.2.0/getting_started/LICENSE/: index.html
v0.2.0/getting_started_example/: index.html
v0.2.0/search/: search_index.json
